# FishheadLabsPortal

./: .gitignore  Cargo.toml  README.md  dev.docker-compose.yml  watcher.sh
cache/: Cargo.toml
cache/src/: errors.rs  lib.rs
cache/src/models/: address.rs  mod.rs  organization.rs  taskinfo.rs
cache/src/transforms/: google_sheets.rs  mod.rs  sheets.rs
google_sheets/: Cargo.toml  README.md
google_sheets/src/: contact.rs  lib.rs
portal/: README.md  bsconfig.json  index.css  index.html  package-lock.json  package.json  run_dev_server.sh  watcher.js  webpack.config.js
portal/scripts/: docker-entrypoint.sh  node.DOCKERFILE
portal/src/: Actions.re  AtlantLayout.re  Cache.re  Dashboard.re  Database.re  DatabasePage.re  Errors.re  Helpers.re  Index.re  LoginPage.re  Middleware.re  NotImplemented.re  PageNotFound.re  index.html
portal/src/Models/: Configuration.re  DatabaseModel.re  Navigation.re  Organization.re  Session.re
portal/src/assets/css/: atlant-theme-default.css  bootstrap.min.css  dropzone.css  jquery.mCustomScrollbar.css
server/: Cargo.toml
server/src/: main.rs
