[package]
name = "cache"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4.11"
env_logger = "0.7.1"

# Error creation/handling
anyhow = "1.0.32"
thiserror = "1.0.20"

# Serialization
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

# String Guid generaters
uuid = { version = "^0.7", features = ["v4", "v5", "serde"] }

# GraphQL
juniper = { version = "0.14.2" }