[package]
name = "sheets"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4.11"
env_logger = "0.7.1"

# Error creation/handling
anyhow = "1.0.32"
thiserror = "1.0.20"

# Serialization
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"

# String Guid generaters
uuid = { version = "0.8.1", features = ["v4", "v5", "serde"] }

#internal code.
# I haven't pushed 0.1 yet, so we use the local copy
subpar = { path = "../External/Subpar/subpar" }
