[package]
name = "server"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4.11"
env_logger = "0.7.1"

# Error creation/handling
anyhow = "1.0.32"
thiserror = "1.0.20"

# Serialization
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

# String Guid generaters
uuid = { version = "0.8.1", features = ["v4", "v5", "serde"] }

# Web server (Juniper_warp is currently using this)
warp = "0.1.22"

# Async processing abstractions (JS Promise)
futures = { version = "0.3.5", features = ["compat"] }
futures-macro = "0.3.5"

# Async processing
tokio = { version = "0.2.22", features = ["macros"] }
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8"] }

# GraphQL
juniper = { version = "0.14.2" }
juniper_warp = "0.5.2"


# And the local components
cache={ path = "../cache" }
postgres={ path = "../postgres" }
sheets={ path = "../sheets" }